Этап 3 дипломной работы Добавляем рекомендательный сервис